--- a/index.html
+++ b/index.html
@@ -1,59 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <!-- Define a viewport para garantir que a página seja responsiva -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Define a codificação de caracteres para UTF-8 -->
     <meta charset="UTF-8">
-    <!-- Título da página -->
     <title>Roberto Alves</title>
     <!-- Link atualizado para o arquivo CSS do Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Link atualizado para o arquivo CSS personalizado -->
+    <!-- Arquivo CSS -->
     <link rel="stylesheet" href="style.css">
-    <!-- Link para o favicon -->
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.webp" type="image/x-icon">
 </head>
 <body>
     <!-- Ícone de modo noturno -->
     <i onclick="mostrar(this)" class="fa fa-moon-o fa-2x night_mode"></i>
     <!-- Imagem do usuário -->
-    <img id="userPhoto" src="perfil.jpg" alt="User Photo">
+    <img id="userPhoto" src="perfil.webp" alt="Foto Roberto">
     <!-- Nome do usuário -->
-    <span id="userName"></span>
-    <!-- Links para diferentes sites -->
+    <span id="userName">Roberto Alves</span>
+    <!-- Links para sites -->
     <div id="links">
         <a class="link" href="https://tecinova.top" target="_blank">
-            <i class="fa fa-rocket" aria-hidden="true"></i> TECiNOVA
+            <i class="fa fa-rocket" aria-hidden="true"></i> Tecnologia + Inovação = TECiNOVA
         </a>
-        <a class="link" href="https://liturgiadiaria.top" target="_blank">
-            <i class="fa fa-heart" aria-hidden="true"></i> Liturgia Diária para Católicos
+        <a class="link" href="https://leituradiaria.top" target="_blank">
+            <i class="fa fa-heart" aria-hidden="true"></i> Meditações para Católicos
         </a>
-        <a class="link" href="https://atividades.veritasedu.top" target="_blank">
-            <i class="fa fa-graduation-cap" aria-hidden="true"></i> Educação Infantil
+        <a class="link" href="" target="_blank">
+            <i class="fa fa-graduation-cap" aria-hidden="true"></i> Faça Parte da Família Veritas
         </a>
     </div>
     <!-- Seção de rodapé com links para redes sociais e contato -->
     <div class="footer">
-        <a href="https://api.whatsapp.com/send?text=Ol%C3%A1%20Roberto!&phone=5573999384167" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5573999384167" target="_blank">
             <i style="line-height: 38px;" class="fa fa-whatsapp circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://facebook.com/robertotecinova" target="_blank">
+        <a href="https://facebook.com/robertoalves.top" target="_blank">
             <i style="line-height: 38px;" class="fa fa-facebook-f circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://instagram.com/robertotecinova" target="_blank">
+        <a href="https://instagram.com/robertoalves.top" target="_blank">
             <i style="line-height: 38px;" class="fa fa-instagram circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://www.youtube.com/c/robertotecinova" target="_blank">
+        <a href="https://www.youtube.com/@robertoads" target="_blank">
             <i style="line-height: 38px;" class="fa fa-youtube circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://twitter.com/robertotecinova" target="_blank">
+        <a href="https://twitter.com/robertoads" target="_blank">
             <i style="line-height: 38px;" class="fa fa-twitter circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://www.linkedin.com/in/robertotecinova/" target="_blank">
+        <a href="https://www.linkedin.com/in/robertoads" target="_blank">
             <i style="line-height: 38px;" class="fa fa-linkedin circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://t.me/robertotecinova" target="_blank">
+        <a href="https://t.me/robertoads" target="_blank">
             <i style="line-height: 38px;" class="fa fa-telegram circulo" aria-hidden="true"></i>
         </a>
         <a href="mailto:ola@robertoalves.top" target="_blank">
