--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+    <meta name="description" content="Página pessoal de Roberto Alves">
+    <meta name="keywords" content="Roberto Alves, Tecnologia, Inovação, Marketing Digital, Vendas Online">
     <title>Roberto Alves</title>
     <!-- Link atualizado para o arquivo CSS do Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Arquivo CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.min.css">
     <!-- Favicon -->
     <link rel="icon" href="favicon.webp" type="image/x-icon">
 </head>
@@ -15,48 +17,42 @@
     <!-- Ícone de modo noturno -->
     <i onclick="mostrar(this)" class="fa fa-moon-o fa-2x night_mode"></i>
     <!-- Imagem do usuário -->
-    <img id="userPhoto" src="perfil.webp" alt="Foto Roberto">
+    <img id="userPhoto" src="perfil.webp" alt="Foto de Roberto Alves">
     <!-- Nome do usuário -->
     <span id="userName">Roberto Alves</span>
     <!-- Links para sites -->
     <div id="links">
-        <a class="link" href="https://tecinova.top" target="_blank">
+        <a class="link" href="https://tecinova.top" target="_blank" rel="noopener noreferrer">
             <i class="fa fa-rocket" aria-hidden="true"></i> Tecnologia + Inovação = TECiNOVA
         </a>
-        <a class="link" href="https://leituradiaria.top" target="_blank">
+        <a class="link" href="https://leituradiaria.top" target="_blank" rel="noopener noreferrer">
             <i class="fa fa-heart" aria-hidden="true"></i> Meditações para Católicos
         </a>
-        <a class="link" href="" target="_blank">
+        <a class="link" href="" target="_blank" rel="noopener noreferrer">
             <i class="fa fa-graduation-cap" aria-hidden="true"></i> Faça Parte da Família Veritas
         </a>
     </div>
     <!-- Seção de rodapé com links para redes sociais e contato -->
     <div class="footer">
-        <a href="https://api.whatsapp.com/send?phone=5573999384167" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5573999384167" target="_blank" rel="noopener noreferrer">
             <i style="line-height: 38px;" class="fa fa-whatsapp circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://facebook.com/robertoalves.top" target="_blank">
+        <a href="https://facebook.com/robertoalves.top" target="_blank" rel="noopener noreferrer">
             <i style="line-height: 38px;" class="fa fa-facebook-f circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://instagram.com/robertoalves.top" target="_blank">
+        <a href="https://instagram.com/robertoalves.top" target="_blank" rel="noopener noreferrer">
             <i style="line-height: 38px;" class="fa fa-instagram circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://www.youtube.com/@robertoads" target="_blank">
+        <a href="https://www.youtube.com/@robertoads" target="_blank" rel="noopener noreferrer">
             <i style="line-height: 38px;" class="fa fa-youtube circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://twitter.com/robertoads" target="_blank">
-            <i style="line-height: 38px;" class="fa fa-twitter circulo" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/robertoads" target="_blank">
+        <a href="https://www.linkedin.com/in/robertoads" target="_blank" rel="noopener noreferrer">
             <i style="line-height: 38px;" class="fa fa-linkedin circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://t.me/robertoads" target="_blank">
-            <i style="line-height: 38px;" class="fa fa-telegram circulo" aria-hidden="true"></i>
-        </a>
-        <a href="mailto:ola@robertoalves.top" target="_blank">
+        <a href="mailto:ola@robertoalves.top" target="_blank" rel="noopener noreferrer">
             <i style="line-height: 38px;" class="fa fa-envelope-o circulo" aria-hidden="true"></i>
         </a>
-        <a href="tel:+5573999384167" target="_blank">
+        <a href="tel:+5573999384167" target="_blank" rel="noopener noreferrer">
             <i style="line-height: 38px;" class="fa fa-phone circulo" aria-hidden="true"></i>
         </a>
     </div>
@@ -65,3 +61,4 @@
     <script src="index.js"></script>
 </body>
 </html>
+
